--- a/src/style/middle.css
+++ b/src/style/middle.css
@@ -35,6 +35,7 @@
   border-radius: 20px;
   margin-top: 10px;
   margin-left: 15px;
+  margin: 10x auto;
 }
 .choosemode {
   display: flex;
@@ -83,6 +84,7 @@
   margin-top: 10px;
   border-radius: 10px;
   margin-left: 15px;
+  margin: 10px;
 }
 .postDetails {
   display: flex;
