--- a/src/style/displayStory.css
+++ b/src/style/displayStory.css
@@ -4,31 +4,32 @@
   flex-direction: column;
   justify-content: center;
   margin: 10px;
+  align-items: center;
 }
 .container4topdiv {
   display: flex;
   justify-content: center;
   gap: 10px;
+  position: relative;
 }
 .arrows {
   position: absolute;
   background-color: white;
   border-radius: 100%;
   align-self: center;
-  position: relative;
 }
 
 #leftarrow {
-  left: 340px;
-  bottom: 462px;
+  left: -10px;
+  bottom: 67px;
   z-index: 1;
   display: none;
   position: absolute;
 }
 
 #rightarrow {
-  right: 340px;
-  bottom: 462px;
+  right: -10px;
+  bottom: 67px;
   position: absolute;
 }
 
