--- a/src/style/displayStory.css
+++ b/src/style/displayStory.css
@@ -9,7 +9,7 @@
 .container4topdiv {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 5px;
   position: relative;
 }
 .arrows {
@@ -46,4 +46,14 @@
 
 .text {
   text-align: center;
+  margin-top: 30px;
+  position: relative;
+}
+
+.plus {
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  color: rgb(0, 204, 255);
+  font-size: 20px;
 }
